--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatuble" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style/style.css" rel="stylesheet">
-    <title>Moving Picture</title>
+    <title>Moving Picture Vers1</title>
 </head>
 
 <body>
